# dependencies on Materials library

message("Configuring Pipeline")

add_subdirectory(Dependencies)

set(SOURCE_FILES #
Animation/Source/AnimationCurve.cpp #
Animation/Source/AnimationManager.cpp #
Animation/Source/Animator.cpp #
Animation/Source/Channel.cpp #
Animation/Source/Keyframe.cpp #
Animation/Source/SkeletonAnimation.cpp #
AssetHandling/AssetLoaderFactory.cpp #
AssetHandling/EntityFactory.cpp #
Collision/CollisionManager.cpp #
Collision/OctTree.cpp #
Collision/CollisionUtils.cpp #
ECS/DataOriented/Systems/SystemManager.cpp #
ECS/DataOriented/Archetype.cpp #
ECS/DataOriented/ArchetypeManager.cpp #
ECS/DataOriented/EntityHandler.cpp #
ECS/ObjectOriented/Source/Component.cpp #
ECS/ObjectOriented/Source/Entity.cpp #
ECSSystems/AnimationSystem.cpp #
Factory_Temp/ArchetypesUI.cpp #
Factory_Temp/EntitySnapshotUI.cpp #
Factory_Temp/Factory.cpp #
Factory_Temp/FactoryUI.cpp #
Factory_Temp/UIUtils.cpp #
GameSystem/Source/GameObjectBase.cpp #
GameSystem/Source/GameObjectManager.cpp #
GameSystem/Source/GameSystemManager.cpp #
Input/Source/InputController.cpp #
Input/Source/InputDefs.cpp #
Input/Source/InputEvent.cpp #
Input/Source/InputManager.cpp #
Input/Source/InputReceiverBase.cpp #
Rendering/2D/Source/SimpleShapes.cpp #
Rendering/2D/Source/Image.cpp #
Rendering/2D/Source/Sprite.cpp #
Rendering/2D/Source/Texture.cpp #
Rendering/3D/Source/AnimatedModel.cpp #
Rendering/3D/Source/ModelBase.cpp #
Rendering/3D/Source/SimpleShapes.cpp #
Rendering/3D/Source/Skeleton.cpp #
Rendering/3D/Source/VertexData.cpp #
Rendering/OpenGL/Source/GLArrayBuffer.cpp #
Rendering/OpenGL/Source/GLBuffer.cpp #
Rendering/OpenGL/Source/GLFrameBuffer.cpp #
Rendering/OpenGL/Source/GLMappedBuffer.cpp #
Rendering/OpenGL/Source/GLObject.cpp #
Rendering/OpenGL/Source/GLRenderBuffer.cpp #
Rendering/OpenGL/Source/GLShader.cpp #
Rendering/OpenGL/Source/GLShaderProgram.cpp #
Rendering/OpenGL/Source/GLTexture.cpp #
Rendering/OpenGL/Source/ShaderUtils.cpp #
Rendering/Shaders/Shader.cpp #
Rendering/Shaders/ShaderManager.cpp #
Rendering/Source/Camera.cpp #
Rendering/Source/CameraManager.cpp #
Rendering/Source/CameraUtils.cpp #
Rendering/Source/Lights.cpp #
Rendering/Source/MaterialManager.cpp #
Rendering/Source/RenderCamera.cpp #
Rendering/Source/RenderManager.cpp #
Rendering/DefaultRenderLayers.cpp #
Rendering/Display.cpp #
Rendering/DisplayManager.cpp #
Rendering/Material.cpp #
Rendering/Mesh.cpp #
Rendering/Renderer.cpp #
Rendering/RenderFrame.cpp #
Rendering/RenderLayer.cpp #
Rendering/RenderThread.cpp #
Source/ApplicationManager.cpp #
Source/GLContextManager.cpp #
Source/SDL2Manager.cpp #
Source/ServiceManager.cpp #
Source/WindowManager.cpp #
StateSystem/Source/State.cpp #
StateSystem/Source/StateHelpers.cpp #
StateSystem/Source/StateManager.cpp #
Time/Source/TimeManager.cpp #
Time/Source/TimeSystem.cpp #
UI/IMGUI/IMGUIDisplayLayer.cpp #
UI/IMGUI/Manager.cpp #
UI/IMGUI/Windows/Examples.cpp #
UI/IMGUI/Windows/MemoryTracker.cpp #
UI/IMGUI/Windows/Profiler.cpp #
UI/IMGUI/Windows/SystemTracker.cpp #
Utils/RegisterUtils.cpp #
Utils/SerializationUtils.cpp)

set(HEADER_FILES #
Animation/Headers/Animation.h #
Animation/Headers/AnimationCurve.h #
Animation/Headers/AnimationManager.h #
Animation/Headers/Animator.h #
Animation/Headers/Channel.h #
Animation/Headers/ChannelTypes.h #
Animation/Headers/Keyframe.h #
Animation/Headers/SkeletonAnimation.h #
AssetHandling/AssetLoaderFactory.h #
AssetHandling/EntityFactory.h #
Collision/Collisions.h #
Collision/CollisionHandler.h #
Collision/CollisionManager.h #
Collision/CollisionUtils.h #
Collision/OctTree.h #
Collision/CollisionHandlers/DebugHandlers/DebugCollisionDisplay.h #
ECS/DataOriented/Systems/System.h #
ECS/DataOriented/Systems/SystemManager.h #
ECS/DataOriented/Archetype.h #
ECS/DataOriented/ArchetypeManager.h #
ECS/DataOriented/Component.h #
ECS/DataOriented/ComponentCreator.h #
ECS/DataOriented/ECS.h #
ECS/DataOriented/EntityHandler.h #
ECS/DataOriented/EntitySnapshot.h #
ECS/DataOriented/IDs.h #
ECS/DataOriented/TemporaryComponentRef.h #
ECS/DataOriented/TypeCollection.h #
ECS/ObjectOriented/Headers/Component.h #
ECS/ObjectOriented/Headers/ComponentPtr.h #
ECS/ObjectOriented/Headers/Entity.h #
ECSSystems/DebugSystems/DebugCollisionSystem.h #
ECSSystems/DebugSystems/DebugBoneSystem.h #
ECSSystems/DebugSystems/DebugWorldTransformSystem.h #
ECSSystems/DebugSystems/DebugOctTreeSystem.h #
ECSSystems/AnimationSystem.h #
ECSSystems/AnimationComponents.h #
ECSSystems/CameraSystem.h #
ECSSystems/CameraComponents.h #
ECSSystems/CollisionComponents.h #
ECSSystems/CollisionSystem.h #
ECSSystems/GeneralComponents.h #
ECSSystems/LifetimeComponent.h #
ECSSystems/LifetimeSystem.h #
ECSSystems/ParentSyncSystem.h #
ECSSystems/RenderingComponents.h #
ECSSystems/RenderingSystem.h #
ECSSystems/TransformComponents.h #
ECSSystems/TransformSystem.h #
Factory_Temp/ArchetypesUI.h #
Factory_Temp/AssetSaverFactory.h #
Factory_Temp/EntitySnapshotUI.h #
Factory_Temp/EntitySnapshotUIVisitor.h #
Factory_Temp/Factory.h #
Factory_Temp/FactoryUI.h #
Factory_Temp/UICreator.h #
Factory_Temp/UIUtils.h #
GameSystem/Headers/GameObjectBase.h #
GameSystem/Headers/GameObjectManager.h #
GameSystem/Headers/GameSystemManager.h #
Headers/ApplicationManager.h #
Headers/GLContextManager.h #
Headers/SDL2Manager.h #
Headers/ServiceManager.h #
Headers/WindowManager.h #
Input/Headers/InputController.h #
Input/Headers/InputDefs.h #
Input/Headers/InputEvent.h #
Input/Headers/InputManager.h #
Input/Headers/InputReceiverBase.h #
Input/Headers/InputState.h #
Input/Headers/InputStateTracker.h #
Physics/PhysicsCollisionHandler.h #
Physics/PhysicsComponents.h #
Physics/PhysicsSettings.h #
Physics/PhysicsSystem.h #
Physics/VelocitySystem.h #
Rendering/2D/Headers/SimpleShapes.h #
Rendering/2D/Headers/Image.h #
Rendering/2D/Headers/Sprite.h #
Rendering/2D/Headers/Texture.h #
Rendering/3D/Headers/AnimatedModel.h #
Rendering/3D/Headers/ModelBase.h #
Rendering/3D/Headers/SimpleShapes.h #
Rendering/3D/Headers/Skeleton.h #
Rendering/3D/Source/VertexData.h #
Rendering/Headers/Camera.h #
Rendering/Headers/CameraManager.h #
Rendering/Headers/CameraUtils.h #
Rendering/Headers/Lights.h #
Rendering/Headers/MaterialManager.h #
Rendering/Headers/RenderCamera.h #
Rendering/Headers/RenderData.h #
Rendering/Headers/RenderDataCreator.h #
Rendering/Headers/RenderManager.h #
Rendering/OpenGL/Headers/GLArrayBuffer.h #
Rendering/OpenGL/Headers/GLBuffer.h #
Rendering/OpenGL/Headers/GLFrameBuffer.h #
Rendering/OpenGL/Headers/GLMappedBuffer.h #
Rendering/OpenGL/Headers/GLObject.h #
Rendering/OpenGL/Headers/GLRenderBuffer.h #
Rendering/OpenGL/Headers/GLShader.h #
Rendering/OpenGL/Headers/GLShaderProgram.h #
Rendering/OpenGL/Headers/GLTexture.h #
Rendering/OpenGL/Headers/ShaderUtils.h #
Rendering/Shaders/Shader.h #
Rendering/Shaders/ShaderManager.h #
Rendering/DefaultRenderLayers.h #
Rendering/Display.h #
Rendering/DisplayManager.h #
Rendering/Material.h #
Rendering/Mesh.h #
Rendering/RenderContext.h #
Rendering/Renderer.h #
Rendering/RenderFrame.h #
Rendering/RenderLayer.h #
Rendering/RenderThread.h #
StateSystem/Headers/State.h #
StateSystem/Headers/StateHelpers.h #
StateSystem/Headers/StateManager.h #
StateSystem/Headers/ECSSystemUtils.h #
Time/Headers/TimeManager.h #
Time/Headers/TimeSettings.h #
Time/Headers/TimeSystem.h #
UI/IMGUI/IMGUIDisplayLayer.h #
UI/IMGUI/Manager.h #
UI/IMGUI/Window.h #
UI/IMGUI/Windows/Examples.h #
UI/IMGUI/Windows/MemoryTracker.h #
UI/IMGUI/Windows/Profiler.h #
UI/IMGUI/Windows/SystemTracker.h #
Utils/RegisterUtils.h #
Utils/SerializationUtils.h)

install(FILES ${HEADER_FILES} DESTINATION Pipeline_Lib)

add_library(Pipeline_Lib STATIC ${SOURCE_FILES})
target_link_libraries(Pipeline_Lib Materials_Lib Pipeline_Dependencies_Lib)
target_include_directories(Pipeline_Lib
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/..
)