message("Configuring Core")

set(SOURCE_FILES #
Debugging/Headers/Macros.cpp #
Debugging/Profiling/Profiler.cpp #
Debugging/Memory/CustomAllocator.cpp #
Debugging/Memory/MemoryTracker.cpp #
Functionality/Source/Scheduler.cpp #
Geometric/2DFunctions.cpp #
Geometric/3DFunctions.cpp #
Geometric/AABBFunctions.cpp #
Geometric/AABRFunctions.cpp #
Geometric/BoxFunctions.cpp #
Geometric/CircleFunctions.cpp #
Geometric/Functions.cpp #
Geometric/Line2DFunctions.cpp #
Geometric/Line3DFunctions.cpp #
Geometric/PlaneFunctions.cpp #
Geometric/RectangleFunctions.cpp #
Geometric/SphereFunctions.cpp #
Geometric/Transform.cpp #
IO/Source/File.cpp #
IO/Source/Folder.cpp #
IO/Source/IOUtils.cpp #
Logging/ConsoleLogger.cpp #
Logging/Logger.cpp #
Math/Source/UtilityFunctions.cpp #
Math/UnitTests/MatrixTests.cpp #
Math/UnitTests/VectorTests.cpp #
Networking/Source/NetworkProtocol.cpp #
Networking/Source/Utils.cpp #
Source/Exception.cpp #
Source/Hash.cpp #
Threading/TaskManager.cpp #
Threading/TaskQueue.cpp #
Threading/TaskSystem.cpp #
Threading/Thread.cpp #
Threading/ThreadManager.cpp #
IdTypes/IncrementalId.cpp #
IdTypes/RuntimeId.cpp #
CoreUnitTests.cpp)

set(HEADER_FILES #
Containers/CircularBuffer.h #
Debugging/Headers/Macros.h #
Debugging/Memory/InternalUtils/Utils.h #
Debugging/Memory/MemoryTracker.h #
Debugging/Profiling/Profiler.h #
Debugging/Profiling/Utils.h 
Functionality/Headers/Event.h #
Functionality/Headers/Function.h #
Functionality/Headers/LockerBase.h #
Functionality/Headers/Scheduler.h #
Functionality/Headers/Subscription.h #
Geometric/2DFunctions.h #
Geometric/3DFunctions.h #
Geometric/AABB.h #
Geometric/AABBFunctions.h #
Geometric/AABR.h #
Geometric/AABRFunctions.h #
Geometric/Box.h #
Geometric/BoxFunctions.h #
Geometric/Circle.h #
Geometric/CircleFunctions.h #
Geometric/Functions.h #
Geometric/GeometryDefs.h #
Geometric/Line2D.h #
Geometric/Line2DFunctions.h #
Geometric/Line3D.h #
Geometric/Line3DFunctions.h #
Geometric/Orientation.h #
Geometric/Plane.h #
Geometric/PlaneFunctions.h #
Geometric/Rectangle.h #
Geometric/RectangleFunctions.h #
Geometric/SphereFunctions.h #
Geometric/Sphere.h #
Geometric/Transform.h #
Headers/AllCore.h #
Headers/BitmaskEnum.h #
Headers/CoreDefs.h #
Headers/EnumUtils.h #
Headers/Exception.h #
Headers/Hash.h #
Headers/Macros.h #
Headers/PtrDefs.h #
Headers/Service.h #
Headers/TemplateDefs.h #
Headers/TimeDefs.h #
Headers/UtilityMacros.h #
IO/Headers/Exception.h #
IO/Headers/File.h #
IO/Headers/Folder.h #
IO/Headers/IODefs.h #
IO/Headers/IOUtils.h #
Logging/ConsoleLogger.h #
Logging/ILogger.h #
Logging/LogFunctions.h #
Logging/Logger.h #
Math/Headers/Axis.h #
Math/Headers/Basis.h #
Math/Headers/Color.h #
Math/Headers/MathDefs.h #
Math/Headers/MathUtils.h #
Math/Headers/Matrix.h #
Math/Headers/Matrix2x2.h #
Math/Headers/Matrix3x3.h #
Math/Headers/Matrix4x4.h #
Math/Headers/MatrixFunctions.h #
Math/Headers/Quaternion.h #
Math/Headers/QuaternionFunctions.h #
Math/Headers/UtilityFunctions.h #
Math/Headers/Vector.h #
Math/Headers/Vector2.h #
Math/Headers/Vector3.h #
Math/Headers/Vector4.h #
Math/Headers/VectorFunctions.h #
Math/UnitTests/MathUnitTests.h #
Math/UnitTests/MatrixTests.h #
Math/UnitTests/VectorTests.h #
Networking/Headers/Macros.h #
Networking/Headers/NetworkConnection.h #
Networking/Headers/NetworkData.h #
Networking/Headers/NetworkMap.h #
Networking/Headers/NetworkProtocol.h #
Networking/Headers/NetworkReceiver.h #
Networking/Headers/NetworkSender.h #
Networking/Headers/Utils.h #
Random/Functions.h #
Random/Random.h #
Random/RandomGenerator.h #
Reflection/Enums.h #
Reflection/Reflectable.h #
Reflection/ReflectableClasses.h #
Reflection/type_traits.h #
Serialization/Formats/Binary/Binary.h #
Serialization/Formats/JSON/JSON.h #
Serialization/Formats/JSON/JSONTypes.h #
Serialization/Formats/JSON/Readers/BasicReaders.h #
Serialization/Formats/JSON/Writers/BasicWriters.h #
Serialization/Serialization.h #
Serialization/type_traits.h #
IdTypes/IncrementalId.h #
IdTypes/InstanceId.h #
IdTypes/RuntimeId.h #
IdTypes/UUID.h #
Threading/SafeTypes/TripleBuffer.h #
Threading/TaskManager.h #
Threading/TaskQueue.h #
Threading/TaskSystem.h #
Threading/Thread.h #
Threading/ThreadManager.h #
TypeSafety/NotNullPtr.h #
TypeSafety/SafeVoidPtr.h #
Versioning/SemanticVerion.h #
Versioning/SimpleVersion.h #
Versioning/Version.h)

add_library(Core_Lib STATIC ${SOURCE_FILES})
install(FILES ${HEADER_FILES} DESTINATION Core_Lib)
target_include_directories(Core_Lib
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/..
)